finish knn challenge

--- a/linear_regression/housing_challenge.ipynb
+++ b/linear_regression/housing_challenge.ipynb
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,72 +1239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>fit_time</th>\n",
-       "      <th>score_time</th>\n",
-       "      <th>test_r2</th>\n",
-       "      <th>train_r2</th>\n",
-       "      <th>test_mean_absolute_error</th>\n",
-       "      <th>train_mean_absolute_error</th>\n",
-       "      <th>root_test_mean_squared_error</th>\n",
-       "      <th>root_train_mean_squared_error</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>lasso</th>\n",
-       "      <td>0.002171</td>\n",
-       "      <td>0.002373</td>\n",
-       "      <td>0.741038</td>\n",
-       "      <td>0.75081</td>\n",
-       "      <td>22743.753462</td>\n",
-       "      <td>22651.02938</td>\n",
-       "      <td>33798.037414</td>\n",
-       "      <td>33449.635393</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       fit_time  score_time   test_r2  train_r2  test_mean_absolute_error  \\\n",
-       "lasso  0.002171    0.002373  0.741038   0.75081              22743.753462   \n",
-       "\n",
-       "       train_mean_absolute_error  root_test_mean_squared_error  \\\n",
-       "lasso                22651.02938                  33798.037414   \n",
-       "\n",
-       "       root_train_mean_squared_error  \n",
-       "lasso                   33449.635393  "
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'model_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-6aa5f6987bfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'model_list' is not defined"
+     ]
     }
    ],
    "source": [
