--- a/random_forrest/the_id3_algorithm.ipynb
+++ b/random_forrest/the_id3_algorithm.ipynb
@@ -221,8 +221,8 @@
     "    - Within each attribute's values find entropy\n",
     "    - Attribute value with smallest entropy is used for rule within node.\n",
     "    - Run observations through first node creating subsets of observation within new nodes\n",
-    "    - If no other attributes use dominant outcome ?\n",
-    "    - Repeat algorithm until there are no attributes or leaf nodes only include single class\n",
+    "    - If no other attributes use dominant outcome (see root node)\n",
+    "    - Repeat algorithm until there are no attributes or leaf nodes only includes single class\n",
     "    "
    ]
   },
