finish question design and start web scape visualizations

--- a/capstone_4_unsupervised_learning/capstone_4_unsupervised_learning_notebook.ipynb
+++ b/capstone_4_unsupervised_learning/capstone_4_unsupervised_learning_notebook.ipynb
@@ -62,6 +62,16 @@
     "\n",
     "Your end result should be a write up of how clustering and modeling compare for classifying your texts. What are the advantages of each? Why would you want to use one over the other? Approximately 3-5 pages is a good length for your write up, and remember to include visuals to help tell your story!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "tfidf for ratio between freq in text to doc\n",
+    "\n",
+    "use pca for dimensionality reduction for one hot encoded words\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
