--- a/experiment_design_AB_test/eval_ab_test_t_test.ipynb
+++ b/experiment_design_AB_test/eval_ab_test_t_test.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from torch import nn\n",
+    "import math\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
     "# Options for pandas\n",
@@ -69,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +105,109 @@
     "print('Answer 1: ', cal_t_value(5, 8, 1, 3, 200, 500), '\\n',\n",
     "      'Answer 2: ', cal_t_value(1090, 999, 400, 30, 900, 100), '\\n',\n",
     "      'Answer 3: ', cal_t_value(45, 40, 45, 40, 2000, 2000), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=2.0293871141542357, pvalue=0.04268383951188061)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_ind(np.random.normal(1090,400,900), np.random.normal(999,30,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + math.exp(-x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid_prime(x):\n",
+    "    return sigmoid(x)*(1 - sigmoid(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9.)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor(1., requires_grad=True)\n",
+    "\n",
+    "y = x * 9 \n",
+    "y.backward()\n",
+    "x.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.4"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8-14.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.tensor(1., requires_grad=True)\n",
+    "\n",
+    "pred_y = x**2\n",
+    "\n",
+    "y = 2\n",
+    "\n",
+    "loss = (pred_y - y)**2\n",
+    "\n",
+    "loss.backward()\n",
+    "\n",
+    "pred_y.grad\n"
    ]
   }
  ],
@@ -119,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   },
   "toc": {
    "base_numbering": 1,
