add craiglist scraper and init EDA

--- a/capstone_final/rider_shack_scraper.ipynb
+++ b/capstone_final/rider_shack_scraper.ipynb
@@ -1,64 +1,100 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "import numpy as np\n",
     "import scrapy\n",
     "from scrapy.crawler import CrawlerProcess\n",
     "from scrapy import Spider\n",
     "import scrapy\n",
-    "from scrapy import Request\n",
-    "\n",
-    "class craiglistSpider(scrapy.Spider):\n",
-    "    name = \"jobs\"\n",
-    "    allowed_domains = [\"craigslist.org\"]\n",
-    "    start_urls = [\"https://honolulu.craigslist.org/search/sss?query=surfboard&sort=rel\"]\n",
+    "from scrapy import Request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ridershackSpider(scrapy.Spider):\n",
+    "        \n",
+    "    name = \"surfboards\"\n",
+    "    allowed_domains = [\"https://www.ridershack.com\"]\n",
+    "    start_urls = [\"https://www.ridershack.com/surfboards/used-surfboards.html?limit=144\"]\n",
     "\n",
     "    def parse(self, response):\n",
-    "        jobs = response.xpath('//p[@class=\"result-info\"]')\n",
+    "        products = response.xpath('//*[@id=\"amshopby-page-container\"]/div[4]/ul')\n",
     "\n",
-    "        for job in jobs:\n",
+    "        for product in products:\n",
     "            \n",
-    "            relative_url = job.xpath('a/@href').extract_first()\n",
+    "            relative_url = product.xpath('a/@href').extract_first()\n",
     "            absolute_url = response.urljoin(relative_url)\n",
     "            \n",
     "            yield Request(absolute_url, callback=self.parse_page, meta={'URL': absolute_url})\n",
     "            \n",
-    "        relative_next_url = response.xpath('//a[@class=\"button next\"]/@href').extract_first()\n",
-    "        absolute_next_url = \"https://honolulu.craigslist.org\" + relative_next_url\n",
+    "#         relative_next_url = response.xpath('//a[@class=\"button next\"]/@href').extract_first()\n",
+    "#         absolute_next_url = \"https://sandiego.craigslist.org\" + relative_next_url\n",
     "\n",
-    "        yield Request(absolute_next_url, callback=self.parse)\n",
+    "#         yield Request(absolute_next_url, callback=self.parse)\n",
     "        \n",
     "    def parse_page(self, response):\n",
     "        url = response.meta.get('URL')\n",
+    "        attr_dict = {\n",
+    "            'condition': np.NaN,\n",
+    "            'make / manufacturer': np.NaN,\n",
+    "            'model name / number': np.NaN,\n",
+    "            'size / dimensions': np.NaN\n",
+    "            }\n",
+    "        \n",
+    "        attr_keys = [key[:-2] for key in response.xpath('//p[@class=\"attrgroup\"]/span/text()').extract()]\n",
+    "        attr_values = [val for val in response.xpath('//p[@class=\"attrgroup\"]/span/b/text()').extract()]\n",
+    "        filled_attr_dict = dict(zip(attr_keys, attr_values))\n",
     "\n",
+    "        attr_dict.update(filled_attr_dict)\n",
+    "        \n",
     "        yield {\n",
     "        'url': url,\n",
-    "        'title': response.xpath('//span[@id=\"titletextonly\"]/text()').extract(),\n",
-    "        'price': response.xpath('//span[@class=\"price\"]/text()').extract(),\n",
+    "        'title': ''.join(response.xpath('//span[@id=\"titletextonly\"]/text()').extract()),\n",
+    "        'price': float(''.join(response.xpath('//span[@class=\"price\"]/text()').extract()).strip('$')),\n",
     "        'description': \"\".join(line for line in response.xpath('//*[@id=\"postingbody\"]/text()').extract()),\n",
-    "        'condition': response.xpath('//p[@class=\"attrgroup\"]/span[1]/b/text()').extract(),    \n",
-    "        'manufacturer': response.xpath('//p[@class=\"attrgroup\"]/span[2]/b/text()').extract(),\n",
-    "        'model_name': response.xpath('//p[@class=\"attrgroup\"]/span[3]/b/text()').extract(),\n",
-    "        'size_dimensions': response.xpath('//p[@class=\"attrgroup\"]/span[4]/b/text()').extract()\n",
+    "        'condition': attr_dict['condition'],    \n",
+    "        'manufacturer': attr_dict['make / manufacturer'],\n",
+    "        'model_name': attr_dict['model name / number'],\n",
+    "        'size_dimensions': attr_dict['size / dimensions'],\n",
+    "        'location': 'San Diego'\n",
     "        }\n",
     "process = CrawlerProcess({\n",
     "'FEED_FORMAT': 'json',\n",
-    "'FEED_URI': 'surfboard.json',\n",
+    "'FEED_URI': 'rider_shack.json',\n",
     "'ROBOTSTXT_OBEY': False,\n",
     "'USER_AGENT': 'ThinkfulDataScienceBootcampCrawler (thinkful.com)',\n",
     "'AUTOTHROTTLE_ENABLED': True,\n",
     "'HTTPCACHE_ENABLED': True,\n",
-    "'LOG_ENABLED': False\n",
+    "'LOG_ENABLED': False,\n",
+    "# 'CLOSESPIDER_PAGECOUNT' : 10\n",
     "})\n",
     "                                         \n",
     "\n",
-    "process.crawl(craiglistSpider)\n",
-    "process.start()\n"
+    "process.crawl(ridershackSpider)\n",
+    "process.start()"
    ]
   }
  ],
